PyMaker/datas/object2/RawHTML/i9101/Python_DOC_referPages.cant-install-ipy-on-python.txt
<div class="post-text" itemprop="text">
<p>I'm trying to install iPy, but I can't seem to do it right. This is the first time I install a module, so please don't assume I should be knowing some things.
I downloaded the file, and I have a setup.py. I held down Shift+Right Click, then "open Command Prompt Here", and pasted the following line :</p>
<p><code>python setup.py --help</code> or <code>python setup.py install</code></p>
<p>It says that it is not recognized as an internal command.</p>
<p>I tried opening it in python and running it, and I get this error:</p>
<pre><code>usage: setup.py [global_opts] cmd1 [cmd1_opts] [cmd2 [cmd2_opts] ...]
   or: setup.py --help [cmd1 cmd2 ...]
   or: setup.py --help-commands
   or: setup.py cmd --help

error: no commands supplied
</code></pre>
<p>I also tried to paste <code>python setup.py --help</code> and <code>python setup.py install</code> in the python console, and I get this:</p>
<pre><code>Traceback (most recent call last):
  File "T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\lib\code.py", line 63, in runsource
    code = self.compile(source, filename, symbol)
  File "T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\lib\codeop.py", line 168, in __call__
    return _maybe_compile(self.compiler, source, filename, symbol)
  File "T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\lib\codeop.py", line 99, in _maybe_compile
    raise err1
  File "T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\lib\codeop.py", line 87, in _maybe_compile
    code1 = compiler(source + "\n", filename, symbol)
  File "T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\lib\codeop.py", line 133, in __call__
    codeob = compile(source, filename, symbol, self.flags, 1)
  File "&lt;interactive input&gt;", line 1
    python setup.py --help
               ^
SyntaxError: invalid syntax
</code></pre>
<p>How am I supposed to install it ?</p>
<p>EDIT: A screenshot of what I get:
<a href="https://i.stack.imgur.com/s2ITF.png" rel="nofollow noreferrer"><img alt="screenshot" src="https://i.stack.imgur.com/s2ITF.png"/></a></p>
<p>EDIT2: 2nd screenshot:
<a href="https://i.stack.imgur.com/IkJXc.png" rel="nofollow noreferrer"><img alt="scren" src="https://i.stack.imgur.com/IkJXc.png"/></a></p>
</div>
<div class="post-text" itemprop="text">
<p>Run this code in a Python shell (i.e. one where you can run Python commands, for example the Python GUI) to get the location of your installed Python:</p>
<pre><code>import sys
sys.executable
</code></pre>
<p>This will give you the complete path to the Python interpreter. </p>
<p>Then, in command prompt (Shift-Right Click where the setup.py is located and open Command Prompt) specify the complete path to Python like this:</p>
<pre><code>"C:\Python36\python.exe" setup.py install
</code></pre>
<p>Or whatever your path is.</p>
</div>
<div class="post-text" itemprop="text">
<p>Sounds like you don't have Python in your <code>$PATH</code>, in that case you need to explicitly write the full path to your Python install, because your shell doesn't know where to find <code>python</code>. For Python 3.6 under Windows that'd probably be <code>C:\Python36\python.exe</code> (or whatever you chose when installing it).</p>
<p>Hence, to install iPython, run:</p>
<pre><code>C:\Python36\python.exe setup.py install
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><code>setup.py</code> is designed to be run from the command line. You'll need to open your command prompt (In Windows 7, hold down shift while right-clicking in the directory with the <code>setup.py</code> file. You should be able to select "Open Command Window Here").</p>
<p>From the command line, you can type</p>
<pre><code>python setup.py --help
</code></pre>
<p>If you want to install it then the command is install:</p>
<pre><code>python setup.py install
</code></pre>
<p>If you need to build the package first, use the build command before installing:</p>
<pre><code>python setup.py build
</code></pre>
<p>Hope this helps!</p>
<blockquote>
<p>HELP:you need more details use this <a href="https://docs.python.org/3/install/index.html" rel="nofollow noreferrer">link</a>.</p>
</blockquote>
<p>Even the above commands may not work correctly. In that case, you can download the <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#pyglet" rel="nofollow noreferrer">Windows installer version</a> which will install the library to your default system Python</p>
</div>
<span class="comment-copy">are you trying in linux or windows</span>
<span class="comment-copy">Do you have python in your PATH variable?</span>
<span class="comment-copy">try <code>pip install ipy</code>  if you downloaded it then try <code>pip install your-directory-path-here</code></span>
<span class="comment-copy">Still doesn't work I posted a screenshot of what I do in case I'm doing something wrong</span>
<span class="comment-copy">@MegzariNassim open <b>Command Prompt</b> in the folder where setup.py is, and type <code>T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\python.exe setup.py install</code>. Make sure you are in the folder where setup.py is and type it in Command prompt, not PyScripter!</span>
<span class="comment-copy">Still nothing it says not identified as an internal command (screenshot in post, and it's in french)</span>
<span class="comment-copy">@MegzariNassim Surround the path to python.exe in double quotes. It should now work… <code>"T:\MATH\Logiciels MATH BD\Program Files\EduPython\App\python.exe" setup.py install</code></span>
<span class="comment-copy">It worked thank you now I know how to install a library.</span>
<span class="comment-copy">I did this and it gives me a syntax error on the first character of my path: <code>T:\MATH\Logiciels MATH BD\Program Files\EduPython\python.exe setup.py install</code></span>
<span class="comment-copy">@MegzariNassim try forward slash</span>
<span class="comment-copy">Still nothing same error</span>
<span class="comment-copy">@MegzariNassim well what is the ‘syntax error’? Please elaborate in your question.</span>
<span class="comment-copy">It gives me a syntax error on the first character of the path wich means in <code>T:\MATH\Logiciels MATH BD\Program Files\EduPython\python.exe setup.py install</code> it is on <code>T:</code></span>
<span class="comment-copy">why you vote -1</span>
<span class="comment-copy">Because the questioner clearly indicates that he is using Windows. Also the question is about installing from setup.py, <b>not</b> from pip.</span>
<span class="comment-copy">kk i will the answer</span>
<span class="comment-copy">@Rishav That never means that OP doesn't need an <code>pip install</code> method,</span>
<span class="comment-copy">@Rishav He edited the answer, So Please remove his down vote also.</span>
